cpp-app/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: cpp-app
  labels:
    app: cpp-app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8003
    protocol: TCP
  selector:
    app: cpp-app
